org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/RequirementUsage_Invalid.sysml.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLInvalidationTests
	ResourceSet {
		ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.systems/Blocks.sysml"}
				File {from ="/library.systems/Requirements.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.systems/Blocks.sysml"}
				File {from ="/library.systems/Requirements.sysml"}
			}
		}
	}
END_SETUP 
*/
package 'Requirement Definitions' {
	
	block A {
		part a;
	}
	constraint def Rdef;
	constraint c: Rdef;
	requirement def id '1' R1def;
	requirement def id '11' R11def;
	requirement def id '2' R2def  :> Rdef;
	
	//XPECT errors --> "A requirement  must be typed by one requirement definition." at "id '1.0' r10 : R1def, R11def;"
	requirement id '1.0' r10 : R1def, R11def;
	/* XPECT errors ---
		"A requirement  must be typed by one requirement definition." at "id '1.1' r11 : Rdef;"
		"Features must have at least one type" at "id '1.1' r11 : Rdef;"
	--- */
	requirement id '1.1' r11 : Rdef;
	//XPECT errors --> "A requirement  must be typed by one requirement definition." at "id '1.2' r12 : R2def;"
	requirement id '1.2' r12 : R2def;
	//XPECT errors --> "A requirement  must be typed by one requirement definition." at "r13 : A;"
	requirement r13 : A;
	//XPECT errors --> "A requirement  must be typed by one requirement definition." at "r14 : A::a;"
	requirement r14 : A::a;
	//XPECT errors --> "A requirement  must be typed by one requirement definition." at "r15 : c;"
	requirement r15 : c;
}